--- a/anyscanner-terms.html
+++ b/anyscanner-terms.html
@@ -1,113 +1,98 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Terms &amp; Conditions</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong>Terms &amp; Conditions</strong> <p>
-                  By downloading or using the app, these terms will
-                  automatically apply to you – you should make sure therefore
-                  that you read them carefully before using the app. You’re not
-                  allowed to copy or modify the app, any part of the app, or
-                  our trademarks in any way. You’re not allowed to attempt to
-                  extract the source code of the app, and you also shouldn’t try
-                  to translate the app into other languages or make derivative
-                  versions. The app itself, and all the trademarks, copyright,
-                  database rights, and other intellectual property rights related
-                  to it, still belong to Berk Bacalan.
-                </p> <p>
-                  Berk Bacalan is committed to ensuring that the app is
-                  as useful and efficient as possible. For that reason, we
-                  reserve the right to make changes to the app or to charge for
-                  its services, at any time and for any reason. We will never
-                  charge you for the app or its services without making it very
-                  clear to you exactly what you’re paying for.
-                </p> <p>
-                  The AnyScanner-Tarayıcı app stores and processes personal data that
-                  you have provided to us, to provide my
-                  Service. It’s your responsibility to keep your phone and
-                  access to the app secure. We therefore recommend that you do
-                  not jailbreak or root your phone, which is the process of
-                  removing software restrictions and limitations imposed by the
-                  official operating system of your device. It could make your
-                  phone vulnerable to malware/viruses/malicious programs,
-                  compromise your phone’s security features and it could mean
-                  that the AnyScanner-Tarayıcı app won’t work properly or at all.
-                </p> <div><p>
-                    The app does use third-party services that declare their
-                    Terms and Conditions.
-                  </p> <p>
-                    Link to Terms and Conditions of third-party service
-                    providers used by the app
-                  </p> <ul><li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><li><a href="https://www.facebook.com/legal/terms/plain_text_terms" target="_blank" rel="noopener noreferrer">Facebook</a></li><li><a href="https://fabric.io/terms/fabric" target="_blank" rel="noopener noreferrer">Fabric</a></li><li><a href="https://matomo.org/terms" target="_blank" rel="noopener noreferrer">Matomo</a></li><li><a href="https://clicky.com/terms/" target="_blank" rel="noopener noreferrer">Clicky</a></li><li><a href="https://developer.yahoo.com/flurry/legal-privacy/terms-service/flurry-analytics-terms-service.html" target="_blank" rel="noopener noreferrer">Flurry Analytics</a></li><li><a href="https://www.appodeal.com/home/terms-of-service/" target="_blank" rel="noopener noreferrer">Appodeal</a></li><li><a href="https://usefathom.com/terms/" target="_blank" rel="noopener noreferrer">Fathom Analytics</a></li><li><a href="https://unity3d.com/legal/terms-of-service" target="_blank" rel="noopener noreferrer">Unity</a></li><li><a href="https://www.sdkbox.com/privacy" target="_blank" rel="noopener noreferrer">SDKBOX</a></li><li><a href="https://gameanalytics.com/terms" target="_blank" rel="noopener noreferrer">GameAnalytics</a></li><li><a href="https://onesignal.com/tos" target="_blank" rel="noopener noreferrer">One Signal</a></li><li><a href="https://expo.io/terms" target="_blank" rel="noopener noreferrer">Expo</a></li><li><a href="https://sentry.io/terms/" target="_blank" rel="noopener noreferrer">Sentry</a></li><li><a href="https://www.applovin.com/terms/" target="_blank" rel="noopener noreferrer">AppLovin</a></li><!----><li><a href="https://www.startapp.com/policy/publisher-terms/" target="_blank" rel="noopener noreferrer">StartApp</a></li><!----><li><a href="https://amplitude.com/terms" target="_blank" rel="noopener noreferrer">Amplitude</a></li><li><a href="https://www.adjust.com/terms/general-terms-and-conditions" target="_blank" rel="noopener noreferrer">Adjust</a></li><li><a href="https://www.mapbox.com/legal/tos" target="_blank" rel="noopener noreferrer">Mapbox</a></li><li><a href="https://godotengine.org/license" target="_blank" rel="noopener noreferrer">Godot</a></li><li><a href="https://segment.com/legal/terms/" target="_blank" rel="noopener noreferrer">Segment</a></li><li><a href="https://mixpanel.com/legal/terms-of-use/" target="_blank" rel="noopener noreferrer">Mixpanel</a></li><li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li></ul></div> <p>
-                  You should be aware that there are certain things that
-                  Berk Bacalan will not take responsibility for. Certain
-                  functions of the app will require the app to have an active
-                  internet connection. The connection can be Wi-Fi or provided
-                  by your mobile network provider, but Berk Bacalan
-                  cannot take responsibility for the app not working at full
-                  functionality if you don’t have access to Wi-Fi, and you don’t
-                  have any of your data allowance left.
-                </p> <p></p> <p>
-                  If you’re using the app outside of an area with Wi-Fi, you
-                  should remember that the terms of the agreement with your
-                  mobile network provider will still apply. As a result, you may
-                  be charged by your mobile provider for the cost of data for
-                  the duration of the connection while accessing the app, or
-                  other third-party charges. In using the app, you’re accepting
-                  responsibility for any such charges, including roaming data
-                  charges if you use the app outside of your home territory
-                  (i.e. region or country) without turning off data roaming. If
-                  you are not the bill payer for the device on which you’re
-                  using the app, please be aware that we assume that you have
-                  received permission from the bill payer for using the app.
-                </p> <p>
-                  Along the same lines, Berk Bacalan cannot always take
-                  responsibility for the way you use the app i.e. You need to
-                  make sure that your device stays charged – if it runs out of
-                  battery and you can’t turn it on to avail the Service,
-                  Berk Bacalan cannot accept responsibility.
-                </p> <p>
-                  With respect to Berk Bacalan’s responsibility for your
-                  use of the app, when you’re using the app, it’s important to
-                  bear in mind that although we endeavor to ensure that it is
-                  updated and correct at all times, we do rely on third parties
-                  to provide information to us so that we can make it available
-                  to you. Berk Bacalan accepts no liability for any
-                  loss, direct or indirect, you experience as a result of
-                  relying wholly on this functionality of the app.
-                </p> <p>
-                  At some point, we may wish to update the app. The app is
-                  currently available on Android &amp; iOS – the requirements for the 
-                  both systems(and for any additional systems we
-                  decide to extend the availability of the app to) may change,
-                  and you’ll need to download the updates if you want to keep
-                  using the app. Berk Bacalan does not promise that it
-                  will always update the app so that it is relevant to you
-                  and/or works with the Android &amp; iOS version that you have
-                  installed on your device. However, you promise to always
-                  accept updates to the application when offered to you, We may
-                  also wish to stop providing the app, and may terminate use of
-                  it at any time without giving notice of termination to you.
-                  Unless we tell you otherwise, upon any termination, (a) the
-                  rights and licenses granted to you in these terms will end;
-                  (b) you must stop using the app, and (if needed) delete it
-                  from your device.
-                </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
-                  I may update our Terms and Conditions
-                  from time to time. Thus, you are advised to review this page
-                  periodically for any changes. I will
-                  notify you of any changes by posting the new Terms and
-                  Conditions on this page.
-                </p> <p>
-                  These terms and conditions are effective as of 2022-12-25
-                </p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about my
-                  Terms and Conditions, do not hesitate to contact me
-                  at berkbacalan@gmail.com.
-    </body>
-    </html>
-      
+<html lang="en">
+<head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <title>Terms & Conditions - AnyScanner</title>
+    <style>
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            line-height: 1.6; 
+            color: #333; 
+            max-width: 800px; 
+            margin: 0 auto; 
+            padding: 2rem;
+            background-color: #f4f7f6;
+        }
+        .container {
+            background-color: #fff;
+            padding: 2.5rem;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+        }
+        h1 { color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 15px; margin-bottom: 1.5rem; }
+        h2 { color: #2980b9; margin-top: 2rem; font-size: 1.3rem; border-left: 4px solid #3498db; padding-left: 10px; }
+        p { margin-bottom: 1.2rem; text-align: justify; }
+        ul { margin-bottom: 1.2rem; padding-left: 1.5rem; }
+        li { margin-bottom: 0.7rem; }
+        .important-box {
+            background-color: #fff5f5;
+            border: 1px solid #feb2b2;
+            padding: 1rem;
+            border-radius: 8px;
+            margin: 1.5rem 0;
+        }
+        .important-text { color: #c53030; font-weight: bold; }
+        .footer { 
+            margin-top: 3rem; 
+            font-size: 0.85rem; 
+            color: #95a5a6; 
+            text-align: center;
+            border-top: 1px solid #eee;
+            padding-top: 1.5rem;
+        }
+        a { color: #3498db; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Terms & Conditions</h1>
+        <p><strong>Effective Date:</strong> February 9, 2026</p>
+        
+        <p>Welcome to <strong>AnyScanner</strong>. By downloading, installing, or using this application, you agree to be bound by these Terms and Conditions. Please read them carefully.</p>
+
+        <h2>1. Intellectual Property Rights</h2>
+        <p>All intellectual property rights, including copyrights, trademarks, and source code related to AnyScanner, are owned by <strong>Berk Bacalan</strong>. You are granted a limited, non-exclusive, non-transferable license to use the app for personal or professional use. You may not copy, modify, decompile, or attempt to extract the source code of the app.</p>
+
+        <h2>2. Subscription and Billing</h2>
+        <p>AnyScanner offers premium features via subscription plans (Weekly, Monthly, Yearly) and a Lifetime purchase option.</p>
+        <ul>
+            <li><strong>Dynamic Trial Periods:</strong> Trial durations are not fixed and may vary based on ongoing offers. The specific duration of any trial will be clearly displayed on the purchase screen (Paywall) at the time of transaction.</li>
+            <li><strong>Automatic Renewal:</strong> Subscriptions automatically renew at the current price unless auto-renew is turned off at least 24 hours before the end of the current billing period.</li>
+            <li><strong>Payments:</strong> All transactions are processed securely via the <strong>Apple App Store (iTunes)</strong>. We do not store or have access to your credit card information.</li>
+            <li><strong>Refunds:</strong> Billing and refunds are managed exclusively by Apple. To request a refund, please contact Apple Support.</li>
+        </ul>
+
+        <div class="important-box">
+            <span class="important-text">3. SERVICE AVAILABILITY AND "LIFETIME" LIMITATION</span>
+            <p style="margin-top: 0.5rem; font-size: 0.95rem;">AnyScanner does not guarantee that its services will be available indefinitely. The "Lifetime" purchase or any long-term subscription refers to the <strong>functional lifespan of the Application</strong> as determined by the developer, not the lifespan of the user. We reserve the right to discontinue, update, or terminate the app's service at any time, for any reason, without prior notice and without liability for further service or refunds.</p>
+        </div>
+
+        <h2>4. Data and Security</h2>
+        <p>While we prioritize your privacy through "On-Device" processing, you are responsible for maintaining the security of your device. We strongly advise against "jailbreaking" your device, as it may compromise the app's security features and functionality.</p>
+
+        <h2>5. Limitation of Liability</h2>
+        <p>AnyScanner is provided on an "AS IS" and "AS AVAILABLE" basis. To the maximum extent permitted by law, <strong>Berk Bacalan</strong> shall not be liable for any direct, indirect, or incidental damages, including but not limited to loss of documents, data, or financial loss resulting from the use or inability to use the service.</p>
+
+        <h2>6. Third-Party Services</h2>
+        <p>The app utilizes third-party providers for analytics, subscription management, and advertising. By using the app, you also agree to their respective terms:</p>
+        <ul>
+            <li><a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank">Apple Standard EULA</a></li>
+            <li><a href="https://www.revenuecat.com/terms" target="_blank">RevenueCat</a></li>
+            <li><a href="https://google.com/admob/terms" target="_blank">Google AdMob</a></li>
+        </ul>
+
+        <h2>7. Changes to Terms</h2>
+        <p>We may update these terms from time to time to reflect changes in our service or legal obligations. Your continued use of the app after updates constitutes acceptance of the new terms.</p>
+
+        <h2>8. Contact</h2>
+        <p>For any questions or support, please contact us at: <br>
+        <strong>Email:</strong> berkbacalan@gmail.com</p>
+
+        <div class="footer">
+            <p>&copy; 2026 AnyScanner. Designed to protect your documents and privacy.</p>
+        </div>
+    </div>
+</body>
+</html>
