Revise service availability and 'Lifetime' access terms
Updated service availability terms to clarify 'Lifetime' access and liability.

--- a/anyscanner-terms.html
+++ b/anyscanner-terms.html
@@ -64,10 +64,9 @@
             <li><strong>Refunds:</strong> Billing and refunds are managed exclusively by Apple. To request a refund, please contact Apple Support.</li>
         </ul>
 
-        <div class="important-box">
-            <span class="important-text">3. SERVICE AVAILABILITY AND "LIFETIME" LIMITATION</span>
-            <p style="margin-top: 0.5rem; font-size: 0.95rem;">AnyScanner does not guarantee that its services will be available indefinitely. The "Lifetime" purchase or any long-term subscription refers to the <strong>functional lifespan of the Application</strong> as determined by the developer, not the lifespan of the user. We reserve the right to discontinue, update, or terminate the app's service at any time, for any reason, without prior notice and without liability for further service or refunds.</p>
-        </div>
+        <h2>3. Service Availability and "Lifetime" Access</h2>
+        <p>AnyScanner aims to provide continuous service. However, please note that any "Lifetime" purchase or long-term subscription refers to the <strong>functional lifespan of the Application</strong> on the App Store. We do not guarantee that the app or its services will be available indefinitely.</p>
+        <p>We reserve the right to discontinue, update, or terminate the app's service at any time, for any reason, without prior notice. In such cases, <strong>Berk Bacalan</strong> shall not be liable for any refunds or further service obligations.</p>
 
         <h2>4. Data and Security</h2>
         <p>While we prioritize your privacy through "On-Device" processing, you are responsible for maintaining the security of your device. We strongly advise against "jailbreaking" your device, as it may compromise the app's security features and functionality.</p>
