Update ownership name in terms and conditions

--- a/anyscanner-terms.html
+++ b/anyscanner-terms.html
@@ -53,7 +53,7 @@
         <p>Welcome to <strong>AnyScanner</strong>. By downloading, installing, or using this application, you agree to be bound by these Terms and Conditions. Please read them carefully.</p>
 
         <h2>1. Intellectual Property Rights</h2>
-        <p>All intellectual property rights, including copyrights, trademarks, and source code related to AnyScanner, are owned by <strong>Berk Bacalan</strong>. You are granted a limited, non-exclusive, non-transferable license to use the app for personal or professional use. You may not copy, modify, decompile, or attempt to extract the source code of the app.</p>
+        <p>All intellectual property rights, including copyrights, trademarks, and source code related to AnyScanner, are owned by <strong>Baran Berk Bacalan</strong>. You are granted a limited, non-exclusive, non-transferable license to use the app for personal or professional use. You may not copy, modify, decompile, or attempt to extract the source code of the app.</p>
 
         <h2>2. Subscription and Billing</h2>
         <p>AnyScanner offers premium features via subscription plans (Weekly, Monthly, Yearly) and a Lifetime purchase option.</p>
@@ -66,13 +66,13 @@
 
         <h2>3. Service Availability and "Lifetime" Access</h2>
         <p>AnyScanner aims to provide continuous service. However, please note that any "Lifetime" purchase or long-term subscription refers to the <strong>functional lifespan of the Application</strong> on the App Store. We do not guarantee that the app or its services will be available indefinitely.</p>
-        <p>We reserve the right to discontinue, update, or terminate the app's service at any time, for any reason, without prior notice. In such cases, <strong>Berk Bacalan</strong> shall not be liable for any refunds or further service obligations.</p>
+        <p>We reserve the right to discontinue, update, or terminate the app's service at any time, for any reason, without prior notice. In such cases, <strong>Baran Berk Bacalan</strong> shall not be liable for any refunds or further service obligations.</p>
 
         <h2>4. Data and Security</h2>
         <p>While we prioritize your privacy through "On-Device" processing, you are responsible for maintaining the security of your device. We strongly advise against "jailbreaking" your device, as it may compromise the app's security features and functionality.</p>
 
         <h2>5. Limitation of Liability</h2>
-        <p>AnyScanner is provided on an "AS IS" and "AS AVAILABLE" basis. To the maximum extent permitted by law, <strong>Berk Bacalan</strong> shall not be liable for any direct, indirect, or incidental damages, including but not limited to loss of documents, data, or financial loss resulting from the use or inability to use the service.</p>
+        <p>AnyScanner is provided on an "AS IS" and "AS AVAILABLE" basis. To the maximum extent permitted by law, <strong>Baran Berk Bacalan</strong> shall not be liable for any direct, indirect, or incidental damages, including but not limited to loss of documents, data, or financial loss resulting from the use or inability to use the service.</p>
 
         <h2>6. Third-Party Services</h2>
         <p>The app utilizes third-party providers for analytics, subscription management, and advertising. By using the app, you also agree to their respective terms:</p>
