--- a/anyscanner-pp.html
+++ b/anyscanner-pp.html
@@ -76,7 +76,7 @@
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <ul>
             <li><strong>Email:</strong> berkbacalan@gmail.com</li>
-            <li><strong>Developer:</strong> Berk Bacalan</li>
+            <li><strong>Developer:</strong> Baran Berk Bacalan</li>
         </ul>
 
         <div class="footer">
